Added necessary imports/exports to sca-contribution.xml files. Added calls to implementation-data-api.jar and derby.jar as contributions.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@608288 13f79535-47bb-0310-9956-ffa450edef68