@@ -26,20 +26,23 @@ import javax.xml.namespace.QName;
 
 import org.apache.tuscany.sca.node.SCANode;
 import org.apache.tuscany.sca.node.SCANodeFactory;
-import org.apache.tuscany.sca.node.util.SCAContributionUtil;
 
 public class LaunchStore {
     public static void main(String[] args) throws Exception {
         System.out.println("Starting ...");
         
-        URL storeContribution = new URL(new File(".").getAbsolutePath() + "/target/classes");
-        URL assetsContribution = new URL(new File("../assets").getAbsolutePath() + "/target/classes");
+        URL storeContribution = new File("./target/classes").toURL();
+        URL assetsContribution = new File("../assets/target/classes").toURL();
         
         SCANodeFactory nodeFactory = SCANodeFactory.newInstance();
         SCANode node = nodeFactory.createSCANode(null, "http://localhost:9998");
+        URL derbyContribution = new File(System.getProperty("user.home") + "/.m2/repository/org/apache/derby/derby/10.1.2.1/derby-10.1.2.1.jar").toURL();
+        URL dataAPIContribution = new File(System.getProperty("user.home") + "/.m2/repository/org/apache/tuscany/sca/tuscany-implementation-data-api/1.1-incubating-SNAPSHOT/tuscany-implementation-data-api-1.1-incubating-SNAPSHOT.jar").toURL();
         
-        node.addContribution("http://store", storeContribution);
+        node.addContribution("http://org/apache/derby", derbyContribution);
+        node.addContribution("http://org/apache/tuscany/implementation-data-api", dataAPIContribution);
         node.addContribution("http://assets", assetsContribution);
+        node.addContribution("http://store", storeContribution);
         
         node.addToDomainLevelComposite(new QName("http://store", "store"));
         node.start();
